--- a/index.html
+++ b/index.html
@@ -496,17 +496,17 @@
         </div>
     </div>
     <div data-color="light" class="page-7 section w-full ">
-        <div class="page-8-top w-full  bg-[#F5F19C] py-14 px-12 flex justify-between items-start">
+        <div class="page-8-top w-full  bg-[#F5F19C] py-14 px-12 max-sm:px-7 flex max-sm:flex-col justify-between items-start">
             <div class="part1">
-                <h2 class="text-7xl leading-normal">Let's build a better future.</h2>
-                <div class="btn w-fit px-6 py-4 flex items-center gap-5 border-[1px] border-[--dcyan] bg-[--black] mt-10">
+                <h2 class="text-7xl leading-normal max-sm:text-3xl">Let's build a better future.</h2>
+                <div class="btn w-fit px-6 py-4 max-smLpx-4 max-sm:py-2 max-sm:mt-4 flex items-center gap-5 border-[1px] border-[--dcyan] bg-[--black] mt-10">
                     <h2 class="text-base uppercase font-semibold text-[#F5F19C]">let's go</h2>
                     <i class="ri-arrow-right-up-line text-xl text-[#F5F19C]"></i>
                 </div>
             </div>
-            <div class="part2 flex items-end gap-10">
-                <p  class="text-lg font-medium w-[23vw]">Find out how Significo’s people-centered designs can make health technology more empowering.</p>
-                <div class="scroll w-36 h-36 relative">
+            <div class="part2 flex items-end gap-10 max-sm:gap-9 max-sm:w-full">
+                <p  class="text-lg max-sm:text-[3vw]  max-sm:leading-none font-medium w-[23vw] max-sm:w-[40vw]">Find out how Significo’s people-centered designs can make health technology more empowering.</p>
+                <div class="scroll w-36 h-36 max-sm:h-20 max-sm:w-20 relative">
                     <img class="spinner w-full h-full object-cover" src="https://assets-global.website-files.com/659dbdfd5a080be8d3483164/659dbdfd5a080be8d348317c_ScrollUp.svg" alt="">
 <div class="inner-scroll w-[7.8vw] h-[7.8vw] border-[1px] border-[--black] rounded-full absolute top-[50%] left-[50%] translate-x-[-50%] translate-y-[-50%] flex items-center justify-center">
     <svg width="35%" height="35%" viewBox="0 0 32 38" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -518,8 +518,8 @@
                 </div>
             </div>
         </div>
-        <div class="mid w-full flex items-center justify-between bg-[--black] text-[--light] px-10 py-14">
-            <div class="part1 text-xl capitalize font-semibold leading-loose tracking-wider">
+        <div class="mid w-full flex items-center justify-between bg-[--black] text-[--light] px-10 py-14 max-sm:py-2 max-sm:px-5">
+            <div class="part1 text-xl max-sm:text-[2.5vw] max-sm:mt-5 capitalize font-semibold leading-loose tracking-wider">
                 <h2>home</h2>
                 <h2>solution</h2>
                 <h2>about</h2>
@@ -527,17 +527,17 @@
                 <h2>contact</h2>
             </div>
             <div class="part2">
-                <h2 class=" text-2xl capitalize font-semibold leading-normal tracking-wider">Join our mailing list  for <br>
+                <h2 class=" text-2xl max-sm:text-lg capitalize font-semibold leading-normal tracking-wider">Join our mailing list  for <br>
                     the latest updates.</h2>
-                    <div class="inner-part flex items-center justify-center gap-5 mt-10">
-                        <input class="outline-1 py-3 px-5 text-[--black] w-[23vw] outline-[#5D91BE] text-lg" type="text" placeholder="Enter your email address...">
-                        <div class="btn w-fit px-8 py-4 flex items-center gap-5 border-[1px] border-[--dcyan] bg-[#F5F19C] text-[--black]">
-                            <h2 class="text-base uppercase font-semibold">subscribe</h2>
+                    <div class="inner-part flex items-center max-sm:flex-col justify-center gap-5 mt-10 max-sm:mt-3">
+                        <input class="outline-1 py-3 px-5 max-sm:py-1 max-sm:px-2 text-[--black] w-[23vw] max-sm:w-[55vw] outline-[#5D91BE] text-lg" type="text" placeholder="Enter your email...">
+                        <div class="btn w-fit px-8 py-4 max-sm:px-2  max-sm:py-1 flex items-center gap-5 max-sm:gap-1 border-[1px] border-[--dcyan] bg-[#F5F19C] text-[--black]">
+                            <h2 class="text-base max-sm:text-[3vw] uppercase font-semibold">subscribe</h2>
                             <i class="ri-arrow-right-up-line text-xl"></i>
                         </div>
                     </div>
             </div>
-            <div class="part3 text-xl capitalize font-semibold leading-loose text-end tracking-wider">
+            <div class="part3 text-xl max-sm:hidden capitalize font-semibold leading-loose text-end tracking-wider">
                 <h2>insights</h2>
                 <h2>newsroom</h2>
                 <h2>resources</h2>
@@ -545,19 +545,19 @@
                 <h2>careers</h2>
             </div>
         </div>
-        <div class="footer w-full px-10 bg-[--black] text-[--light]">
+        <div class="footer w-full px-10 max-sm:px-5 bg-[--black] text-[--light]">
         <h1 class="text-[19vw] tracking-wide font-bold leading-tight">Significo</h1>
         <div class="last w-full sticky bottom-0 left-0 bg-[--black]">
             <div class="row w-full h-[1px] bg-[--light]"></div>
-            <div class="inner-last w-full flex items-center justify-between py-10">
-                <div class="part1 flex gap-5 text-sm">
+            <div class="inner-last w-full flex items-center justify-between py-10 max-sm:py-4">
+                <div class="part1 flex gap-5 text-sm max-sm:hidden">
                     <h2>Privacy Policy</h2>
                     <h2>Terms of Use</h2>
                 </div>
-                <div class="part2 text-sm">
+                <div class="part2 text-sm max-sm:text-[2vw] max-sm:font-semilight max-sm:leading-none">
                     <h2>© 2024 Signifco. All rights reserved.</h2>
                 </div>
-                <div class="part3 text-2xl flex gap-4">
+                <div class="part3 text-2xl max-sm:text-lg flex gap-4 max-sm:gap-2">
                     <i class="ri-instagram-line"></i>
                     <i class="ri-linkedin-box-fill"></i>
                     <i class="ri-github-fill"></i>
