--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
 </head>
 <body theme ="cyan">
-<div class="main w-full overflow-x-hidden">
-    <div data-color="black" class="page-1 section w-full min-h-screen relative overflow-hidden">
+<div class="main w-full ">
+    <div data-color="black" class="page-1 section w-full relative overflow-hidden">
         <div class="nav flex items-center justify-between z-[88] w-full py-5 px-5 absolute ">
             <div class="text-5xl font-[syne] font-semibold tracking-tight max-sm:text-4xl">Significo</div>
             <div class="flex items-center justify-between w-[30rem] max-sm:hidden">
@@ -30,8 +30,8 @@
                 Software. Apps. Tools.
                 For real people. Real lives.</h2>
         </div>
-        <div style="--clip: 100%" class="videocontainer absolute w-full h-screen z-10">
-            <video autoplay muted loop src="https://xgjzloifyvgpbmyonaya.supabase.co/storage/v1/object/public/files/bBj1XfrSyi/1ENIoa5sjq" class="w-full h-full object-cover"></video>
+        <div style="--clip: 100%" class="videocontainer absolute w-full top-0 left-0 overflow-hidden h-screen z-[10]">
+            <video autoplay muted loop src="https://xgjzloifyvgpbmyonaya.supabase.co/storage/v1/object/public/files/bBj1XfrSyi/1ENIoa5sjq" class="absolute object-cover  w-full top-1/3 left-1/2 -translate-x-1/2 -translate-y-1/3  "></video>
         </div>
         <div class="textContainer scale-[1] w-full h-screen flex flex-col items-center justify-center overflow-hidden relative mt-8">
             <div class="headingText absolute top-[10%] text-3xl max-sm:text-xl text-center font-semilight leading-normal">
@@ -186,8 +186,8 @@
 </div>
         </div>
     </div>
-    <div data-color="cyan" class="page-2 section w-full min-h-screen py-40 max-sm:py-10 px-10 max-sm:px-5 relative max-sm:flex-col flex items-start justify-between gap-5">
-        <div class="left w-[80vh] max-sm:w-full sticky top-14 left-0">
+    <div data-color="cyan" class="page-2 section w-full  py-40 max-sm:py-10 px-10 max-sm:px-5 relative max-sm:flex-col flex items-start justify-between gap-5">
+        <div class="left w-[40%] max-sm:w-full sticky top-0 left-0">
             <p class="text-md leading-normal">Significo is a leading health software creator founded on the belief
                 that technology can transform healthcare to put people first.
                 Whether they are employees, members, customers, or clients, we
@@ -200,7 +200,7 @@
                         <i class="ri-arrow-right-up-line text-xl"></i>
                     </div>
         </div>
-        <div class="right flex flex-col gap-8 items-center w-[60%] max-sm:w-full max-sm:pt-10 pt-[40vw]">
+        <div class="right flex flex-col overflow-hidden gap-8 items-center w-[60%] max-sm:w-full max-sm:pt-10 pt-[40vw]">
 <div class="child w-[30vw] max-sm:w-full border-[1px] border-[--dcyan] py-8 px-8 flex items-center justify-between gap-[3vw] transition-all duration-500">
     <div class="child-part-1">
         <h1 class="text-xl font-semibold mb-3">Driven by Purpose</h1>
@@ -468,7 +468,7 @@
         </div>
 
     </div>
-    <div data-color="light" class="article w-full h-full max-sm:py-5 py-10 px-10 max-sm:px-5 flex max-sm:flex-col items-center max-sm:items-start justify-between">
+    <div data-color="light" class="article w-full h-full max-sm:py-5 py-10 px-10 max-sm:px-5 flex max-sm:flex-col items-center max-sm:items-start gap-20 ">
         <div class="left-article">
             <p class="text-2xl max-sm:text-xl w-[12em]">Stay up-to-date on the
                 latest healthcare 
@@ -481,7 +481,7 @@
                 </div>
                 
         </div>
-        <div class="right-article  w-[60%] max-sm:w-full flex items-center flex-col justify-between">
+        <div class="right-article  w-[60%] max-sm:w-full flex items-center max-sm:flex-col justify-between">
 <div class="article-items capsule1 translate-y-20 max-sm:translate-y-0 py-10 px-10 max-sm:py-4 max-sm:px-4 w-[23rem] h-[47rem] max-sm:h-[22rem] max-sm:w-[10rem] border-[1px] border-black border rounded-[12rem] mt-[16rem] max-sm:mt-5 max-sm:mt-0 -rotate-[20deg]">
 <img class="rounded-full w-[17rem] h-[17rem] max-sm:h-[7rem] max-sm:w-[7rem] max-sm:ml-2" src="https://assets-global.website-files.com/659dbdfd5a080be8d3483190/65e61826ab9558e05e681a7f_Untitled%20design.png" alt="">
 <h2 class="text-[1.5rem] font-bold text-center py-[4rem] max-sm:py-4 max-sm:text-[3vw]">Equity in Tech: An International Women’s Day Conversation with Caroline Nieto, Significo’s CPO </h2>
